--- a/面试复盘.md
+++ b/面试复盘.md
@@ -448,19 +448,317 @@ export const ceactAsyncAdd1Action=(data,time)=>{
 }
 ```
 
-## asyac promise settimeout 调用顺序
+## css 选择器
+
+* 标签选择器
+  
+  语法 : 标签名{}
+
+  作用 : 选中对应标签中的内容
+
+  例:
+  ```css
+  p{} , div{} , span{} , ol{} , ul{} ......
+  ```
+* 类选择器(class选择器)
+  语法 : .class属性值{}
+
+  作用 : 选中对应class属性值的元素
+
+  例子 : 
+  ```css
+  <p class="A">段落1</p>
+  <p class="B">段落1</p>
+  <p class="C">段落1</p>
+  .A{} , .B{} , .C{} ......
+  ```
+
+  注意:class里面的属性值不能以数字开头,如果以符号开头,只能是'_'或者'-'这两个符号,其他的符号不可以,一个class里面可以有多个属性值
+
+* id选择器
+  
+  语法 : #id属性值{}
+
+  作用 : 选中对应id属性值的元素
+
+  例子 : 
+  ```css
+  <p id="A">段落1</p>
+  <p id="B">段落1</p>
+  <p id="C">段落1</p>
+
+  #A{} , #B{} , #C{} ......
+  ```
+* 4.通配符选择器
+  语法 : *{}
+
+  作用 : 让页面中所有的标签执行该样式,通常用来清除间距
+
+  例子 : 
+  ```css
+  *{
+      margin: 0;  //外间距
+      padding: 0;  //内间距
+  }
+  ```
+* 群组选择器
+
+  语法 : 选择器1,选择器2,选择器3...{}
+
+  作用 : 同时选中对应选择器的元素
+
+* 后代选择器
+
+  后代选择器也叫包含选择器，祖先元素直接或间接的包含后代元素
+
+  ```css
+  /* 后代选择器(包含选择器),选择到的是box下面的所有后代p */
+     .box p{
+      width: 200px;
+      height: 200px;
+      background-color: yellow;
+    } 
+  ```
+
+* 子代选择器
+
+  父元素直接包含子元素,子元素直接被父元素包含
+  ```css
+  /*子选择器选中的是.box下所有的儿子p*/
+   .box>p{
+      width: 200px;
+      height: 200px;
+      background-color: yellow;
+    } 
+  ```
+
+* 相邻兄弟选择器
+  ```css
+   /* 相邻兄弟,会选择到box后面紧挨着的p,那么就是内容为111的p标签 */
+    .box+p{
+    }
+
+  ```
+* 通用兄弟选择器
+
+  ```css
+  /*通用兄弟选择器,会选择到.box后面所有的兄弟p*/
+   .box~p{
+
+    }
+
+  ```
+
+* 常用的伪类选择器
+
+  :first-child   第一个子元素
+
+  :last-child    最后一个子元素
+
+  :nth-child()   选中第n个元素
+
+  关于:nth-child()的特殊值(括号内的内容可以填写以下几种)
+
+          n   第n个   n的范围0到正无穷（全选）
+
+          even或2n    选中偶数位的元素
+
+          odd或2n+1   选中奇数位得到元素
+
+  以child结尾的是在所有元素中选择
+
+  :first-of-type  第一个子元素
+
+  :last-of-type   最后一个子元素
+
+  :nth-of-type()    选中第n个元素
+  以type结尾的是在相同元素中选择
 
 ## 性能优化
 
-防抖节流
+**防抖节流**
 
-延迟渲染
+**懒加载（延迟渲染）**
+
+懒加载也叫做延迟加载、按需加载，指的是在长网页中延迟加载图片数据，是一种较好的网页性能优化的方式。在比较长的网页或应用中，如果图片很多，所有的图片都被加载出来，而用户只能看到可视窗口的那一部分图片数据，这样就浪费了性能。
+
+如果使用图片的懒加载就可以解决以上问题。在滚动屏幕之前，可视化区域之外的图片不会进行加载，在滚动屏幕时才加载。这样使得网页的加载速度更快，减少了服务器的负载。懒加载适用于图片较多，页面列表较长（长列表）的场景中。
+
+懒加载与预加载的区别
+
+* 懒加载也叫延迟加载，指的是在长网页中延迟加载图片的时机，当用户需要访问时，再去加载
+* 预加载指的是将所需的资源提前请求加载到本地，这样后面在需要用到时就直接从缓存取资源
+
+**webpack优化**
+
+如何提⾼webpack的打包速度? 
+
+（1）优化 Loader
+
+对于 Loader 来说，影响打包效率首当其冲必属 Babel 了。因为 Babel 会将代码转为字符串生成 AST，然后对 AST 继续进行转变最后再生成新的代码，项目越大，转换代码越多，效率就越低。当然了，这是可以优化的。
+
+优化 Loader 的文件搜索范围
+```js
+module.exports = {
+  module: {
+    rules: [
+      {
+        // js 文件才使用 babel
+        test: /\.js$/,
+        loader: 'babel-loader',
+        // 只在 src 文件夹下查找
+        include: [resolve('src')],
+        // 不会去查找的路径
+        exclude: /node_modules/
+      }
+    ]
+  }
+}
+```
+对于 Babel 来说，希望只作用在 JS 代码上的，然后 node_modules 中使用的代码都是编译过的，所以完全没有必要再去处理一遍。
+
+当然这样做还不够，还可以将 Babel 编译过的文件缓存起来，下次只需要编译更改过的代码文件即可，这样可以大幅度加快打包时间
+```js
+loader: 'babel-loader?cacheDirectory=true'
+```
+
+HappyPack
+
+受限于 Node 是单线程运行的，所以 Webpack 在打包的过程中也是单线程的，特别是在执行 Loader 的时候，长时间编译的任务很多，这样就会导致等待的情况。
+
+HappyPack 可以将 Loader 的同步执行转换为并行的，这样就能充分利用系统资源来加快打包效率了
+```js
+module: {
+  loaders: [
+    {
+      test: /\.js$/,
+      include: [resolve('src')],
+      exclude: /node_modules/,
+      // id 后面的内容对应下面
+      loader: 'happypack/loader?id=happybabel'
+    }
+  ]
+},
+plugins: [
+  new HappyPack({
+    id: 'happybabel',
+    loaders: ['babel-loader?cacheDirectory'],
+    // 开启 4 个线程
+    threads: 4
+  })
+]
+```
+
 
 ## webpack构建流程
 
 ## promise.all
 
-## promise timeout async的输出顺序
+Promise.all可以将多个Promise实例包装成一个Promise实例。
+
+Promise.all方法可以接受一个数组作为参数，数组中的每一项都是一个Promise的对象实例（如果不是，就会先调用Promise.reslove方法，将参数转化为Promise对象实例，再进行下一步的处理）。Promise.all方法的参数不一定是数组，但是必须具有Iterator接口。
+
+只有数组里每个Promise的状态都编程了Fulfilled，Promise.all的状态才会变成Fulefilled，然后将每一个状态发返回的值，组装程一个数组返回给后面的回调函数。
+
+只要数组里面有一个Promise的状态是Rejected，Promise.all的状态就会变成Rejected。这个时候第一个被Rejected的实例的结果会传递给后面你的回调。
+
+如果作为参数的Promise实例自身定义了catch方法，那么他被Rejected时并不会被Promise.all的catch的方法给接受。
+
+Promise.all中的执行的顺序其实应该是并行的
+
+手动实现promise.all
+
+```js
+Promise.all = function (promise) {
+  return new Promise((resolve, reject) => {
+      let index = 0
+      let result = []
+      if (promise.length === 0) {
+          resolve(result)
+      } else {
+          function processValue(i, data) {
+              result[i] = data
+              if (++index === promise.length) {
+                  resolve(result)
+              }
+          }
+          for (let i = 0; i < promise.length; i++) {
+              Promise.resolve(promise[i]).then((data) => {
+                  processValue(i, data)
+              }, (err) => {
+                  reject(err)
+                  return
+              })
+          }
+      }
+  })
+}
+```
+
+并发限制
+
+如果我们希望将promise.all中的处理改为串行的，我们可以这样写
+```js
+promise.asyncAll = function(promises) {
+  return new Promise((resolve, reject) => {
+    let index = 0;
+    let result = [];
+    if(promises.length === 0) return resolve(result);
+    else {
+      function runPromise() {
+        if(index === promises.length) return resolve(result);
+        else {
+          Promise.resolve(promises[index]).then(data => {
+            result[index] = data;
+            index++;
+            runPromise();
+          }, err => {
+            reject(err);
+          })
+        }
+      }
+      runPromise();
+    }
+  })
+}
+```
+
+如果我们想实现五个并行，其余串行、
+
+```js
+Promise.asyncStep = function (promises) {
+  return new Promise((resolve, reject) => {
+    let index = 0
+    let stepCount = 5
+    let result = []
+    let count = promise.length
+    if (promise.length === 0) {
+        resolve(result)
+    } else {
+      function runPromise () {
+        if (index === promise.length) {
+          resolve(result);
+        } else {
+          stepCount = Math.min(count, stepCount)
+          for (let i = 0; i < stepCount; i++) {
+            --count;
+            Promise.resolve(promise[index]).then(data => {
+              result[index] = data;
+              ++index;
+            }, err => {
+              reject(err)
+            });
+          }
+          runPromise();
+        }
+      }
+      runPromise()
+    }
+  })
+}
+```
+
+## async promise settimeout 调用顺序
 
 宏任务
 >同步任务
@@ -496,6 +794,14 @@ async1 end
 3 在一轮宏任务全部执行完之后，再来执行await后面的内容async1 end。
 
 这里可以理解为await后面的语句相当于放到了new Promise中，下一行及之后的语句相当于放在Promise.then中。
+
+## React17
+
+## 分布式计算
+
+## 洋葱模型
+
+## 设计模式
 
 
 
