--- a/性能优化.md
+++ b/性能优化.md
@@ -2,3 +2,84 @@
 
 CDN（Content Delivery Network，内容分发网络）是指一种通过互联网互相连接的电脑网络系统，利用最靠近每位用户的服务器，更快、更可靠地将音乐、图片、视频、应用程序及其他文件发送给用户，来提供高性能、可扩展性及低成本的网络内容传递给用户。
 
+### 回流与重绘
+1. 回流与重绘的概念及触发条件
+2. 
+（1）回流
+>当渲染树中部分或者全部元素的尺寸、结构或者属性发生变化时，浏览器会重新渲染部分或者全部文档的过程就称为回流。
+
+下面这些操作会导致回流：
+
+页面的首次渲染
+
+浏览器的窗口大小发生变化
+
+元素的内容发生变化
+
+元素的尺寸或者位置发生变化
+
+元素的字体大小发生变化
+
+激活CSS伪类
+
+查询某些属性或者调用某些方法
+
+添加或者删除可见的DOM元素
+
+在触发回流（重排）的时候，由于浏览器渲染页面是基于流式布局的，所以当触发回流时，会导致周围的DOM元素重新排列，它的影响范围有两种：
+
+全局范围：从根节点开始，对整个渲染树进行重新布局
+
+局部范围：对渲染树的某部分或者一个渲染对象进行重新布局
+
+（2）重绘
+>当页面中某些元素的样式发生变化，但是不会影响其在文档流中的位置时，浏览器就会对元素进行重新绘制，这个过程就是重绘。
+
+下面这些操作会导致重绘：
+
+color、background 相关属性：background-color、background-image 等
+
+outline 相关属性：outline-color、outline-width 、text-decoration
+
+border-radius、visibility、box-shadow
+
+注意： 当触发回流时，一定会触发重绘，但是重绘不一定会引发回流。
+
+2. 如何避免回流与重绘
+   
+减少回流与重绘的措施：
+
+操作DOM时，尽量在低层级的DOM节点进行操作
+
+不要使用table布局， 一个小的改动可能会使整个table进行重新布局
+
+使用CSS的表达式
+
+不要频繁操作元素的样式，对于静态页面，可以修改类名，而不是样式。
+
+使用absolute或者fixed，使元素脱离文档流，这样他们发生变化就不会影响其他元素
+
+避免频繁操作DOM，可以创建一个文档片段documentFragment，在它上面应用所有DOM操作，最后再把它添加到文档中
+
+将元素先设置display: none，操作结束后再把它显示出来。因为在display属性为none的元素上进行的DOM操作不会引发回流和重绘。
+
+将DOM的多个读操作（或者写操作）放在一起，而不是读写操作穿插着写。这得益于浏览器的渲染队列机制。
+
+**浏览器针对页面的回流与重绘，进行了自身的优化——渲染队列**
+
+浏览器会将所有的回流、重绘的操作放在一个队列中，当队列中的操作到了一定的数量或者到了一定的时间间隔，浏览器就会对队列进行批处理。这样就会让多次的回流、重绘变成一次回流重绘。
+
+上面，将多个读操作（或者写操作）放在一起，就会等所有的读操作进入队列之后执行，这样，原本应该是触发多次回流，变成了只触发一次回流。
+
+### 防抖节流
+
+### 懒加载（延迟渲染）
+
+懒加载也叫做延迟加载、按需加载，指的是在长网页中延迟加载图片数据，是一种较好的网页性能优化的方式。在比较长的网页或应用中，如果图片很多，所有的图片都被加载出来，而用户只能看到可视窗口的那一部分图片数据，这样就浪费了性能。
+
+如果使用图片的懒加载就可以解决以上问题。在滚动屏幕之前，可视化区域之外的图片不会进行加载，在滚动屏幕时才加载。这样使得网页的加载速度更快，减少了服务器的负载。懒加载适用于图片较多，页面列表较长（长列表）的场景中。
+
+懒加载与预加载的区别
+
+* 懒加载也叫延迟加载，指的是在长网页中延迟加载图片的时机，当用户需要访问时，再去加载
+* 预加载指的是将所需的资源提前请求加载到本地，这样后面在需要用到时就直接从缓存取资源
